# coro

./: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp  temp.cpp
.github/workflows/: c-cpp.yml
doc/: awaitable.md  manual_reset_event.md  sync_wait.md  when_all.md
include/: awaitable_traits.hpp  broken_promise.hpp  fmap.hpp  future.hpp  get_awaiter.hpp  is_awaiter.hpp  lightweight_manual_reset_event.hpp  manual_reset_event.hpp  shared_task.hpp  static_thread_poll.hpp  sync_wait.hpp  task.hpp  timer.hpp  void_value.hpp  when_all.hpp  when_all_counter.hpp  when_all_ready_awaitable.hpp  when_all_task.hpp
include/concepts/: awaitable.hpp
test/: get_awaiter_test.cpp  shared_task_test.cpp
tests/: CMakeLists.txt  awaitable_traits_test.cpp  fmap_test.cpp  get_awaiter_test.cpp  lvalue_rvalue_result_test.cpp  sync_wait_test.cpp  task_test.cpp
